--- a/app/components/lookbook/embed/inspector/component.html.erb
+++ b/app/components/lookbook/embed/inspector/component.html.erb
@@ -51,7 +51,7 @@
         src: lookbook_preview_path(target.path, params.merge(lookbook_embed: true)),
         alpine_data: "store",
         resize_height: false,
-        class: "mb-[-2px] transition-all",
+        class: "mb-[-2px] transition-[height] duration-150",
         ":style": "`height: ${viewportCssHeight}`"
          %>
     </div>
