--- a/app/views/lookbook/embeds/show.html.erb
+++ b/app/views/lookbook/embeds/show.html.erb
@@ -1,23 +1,12 @@
-<%= content_for :body do %>
-  <div
-    id="app"
-    x-data="app"
-    x-cloak
-    @popstate.window="handleNavigation"
-    @click.document="hijax">
-
-    <%= render "lookbook/partials/user_styles" %>
-
-    <%= lookbook_render "embed/inspector",
-      example: @target,
-      options: @options,
-      context: {
-        data: @inspector_data,
-        params: @passed_params,
-        dynamic_display_options: @dynamic_display_options,
-        static_display_options: @static_display_options
-      } %>
-  </div>
-
-  <%= render "lookbook/partials/iframe_content_scripts" %>
-<% end %>
+<%= lookbook_render "embed/inspector",
+  target: @target,
+  examples: @example_choices,
+  panels: @panels,
+  actions: @actions,
+  options: @options,
+  context: {
+    data: @inspector_data,
+    params: @passed_params,
+    dynamic_display_options: @dynamic_display_options,
+    static_display_options: @static_display_options
+  } %>
