--- a/app/views/lookbook/partials/_iframe_content_scripts.html.erb
+++ b/app/views/lookbook/partials/_iframe_content_scripts.html.erb
@@ -1,1 +1,1 @@
-<script src="/lookbook-assets/js/iframe.js?v=<%= Lookbook.version %>"></script>
+<script src="<%= asset_path("/js/iframe.js") %>" defer></script>
