--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1401,23 +1401,10 @@ pre[class*="language-"] {
   background-color: rgb(254 252 232 / var(--tw-bg-opacity));
 }
 
-[data-component="display-options-field"] [type="text"], [data-component="display-options-field"] [type="email"], [data-component="display-options-field"] [type="url"], [data-component="display-options-field"] [type="password"], [data-component="display-options-field"] [type="number"], [data-component="display-options-field"] [type="date"], [data-component="display-options-field"] [type="datetime-local"], [data-component="display-options-field"] [type="month"], [data-component="display-options-field"] [type="search"], [data-component="display-options-field"] [type="tel"], [data-component="display-options-field"] [type="time"], [data-component="display-options-field"] [type="week"], [data-component="display-options-field"] textarea, [data-component="display-options-field"] select {
-  padding: .26rem .6rem;
-  font-size: .8rem;
-  line-height: 1.1rem;
-}
-
 [data-component="display-options-field"] label {
   cursor: pointer;
   color: var(--lookbook-input-text);
   font-size: .82rem;
-}
-
-[data-component="display-options-field"] select {
-  background-position: right .4rem center;
-  background-size: 1.2em 1.2em;
-  border-radius: .375rem;
-  padding-right: 1.5rem;
 }
 
 [data-component="icon"] {
@@ -1591,6 +1578,15 @@ pre[class*="language-"] {
   padding-left: 1rem;
   padding-right: 1rem;
   position: relative;
+}
+
+[data-component="toolbar"] select {
+  background-position: right .4rem center;
+  background-size: 1.2em 1.2em;
+  border-radius: .375rem;
+  padding: .26rem 1.5rem .26rem .6rem;
+  font-size: .8rem;
+  line-height: 1.1rem;
 }
 
 [data-component="viewport"] {
@@ -1818,12 +1814,12 @@ input[type="color"]::-webkit-color-swatch {
   z-index: 40 !important;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
 .z-10 {
   z-index: 10;
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .mx-auto {
@@ -1900,12 +1896,12 @@ input[type="color"]::-webkit-color-swatch {
   margin-right: auto;
 }
 
-.mb-\[-2px\] {
-  margin-bottom: -2px;
+.\!ml-2 {
+  margin-left: .5rem !important;
 }
 
-.mt-1 {
-  margin-top: .25rem;
+.mb-\[-2px\] {
+  margin-bottom: -2px;
 }
 
 .mr-1\.5 {
@@ -2078,10 +2074,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .max-w-none {
   max-width: none;
-}
-
-.max-w-xs {
-  max-width: 20rem;
 }
 
 .flex-none {
@@ -2386,10 +2378,6 @@ input[type="color"]::-webkit-color-swatch {
   border-top-width: 0;
 }
 
-.border-dashed {
-  border-style: dashed;
-}
-
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
@@ -2410,11 +2398,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .\!border-lookbook-header-border {
   border-color: var(--lookbook-header-border) !important;
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-lookbook-tabs-border-active {
@@ -2445,16 +2428,16 @@ input[type="color"]::-webkit-color-swatch {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-lookbook-drawer-bg {
+  background-color: var(--lookbook-drawer-bg);
+}
+
 .bg-lookbook-page-bg {
   background-color: var(--lookbook-page-bg);
 }
 
 .bg-transparent {
   background-color: #0000;
-}
-
-.bg-lookbook-drawer-bg {
-  background-color: var(--lookbook-drawer-bg);
 }
 
 .bg-lookbook-input-toggle-active {
@@ -2512,10 +2495,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .p-3 {
   padding: .75rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .p-8 {
@@ -2624,14 +2603,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .pt-1\.5 {
   padding-top: .375rem;
-}
-
-.pr-2 {
-  padding-right: .5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .pt-2\.5 {
@@ -2775,6 +2746,10 @@ input[type="color"]::-webkit-color-swatch {
 
 .text-lookbook-prose-text {
   color: var(--lookbook-prose-text);
+}
+
+.text-lookbook-embed-title {
+  color: var(--lookbook-embed-title);
 }
 
 .text-lookbook-nav-icon-stroke {
