refactor(embeds): more embed refinements

--- a/app/views/layouts/lookbook/embed.html.erb
+++ b/app/views/layouts/lookbook/embed.html.erb
@@ -4,7 +4,8 @@
     x-data="app"
     x-cloak
     @popstate.window="handleNavigation"
-    @click.document="hijax">
+    @click.document="hijax"
+    class="rounded-md overflow-hidden">
     
     <%= render "lookbook/partials/user_styles" %>
 
