--- a/app/assets/lookbook/css/themes/zinc.css
+++ b/app/assets/lookbook/css/themes/zinc.css
@@ -62,6 +62,6 @@
   --lookbook-header-text: var(--lookbook-white);
   --lookbook-header-border: var(--lookbook-accent-700);
   --lookbook-blank-slate-title: var(--lookbook-accent-600);
-  --lookbook-embed-title: var(--lookbook-accent-700);
+  --lookbook-embed-title: var(--lookbook-text);
   --lookbook-branding-text: var(--lookbook-header-text);
 }
