fix(embeds): fix link hijaxing when in embeds

--- a/app/components/lookbook/embed/inspector/component.html.erb
+++ b/app/components/lookbook/embed/inspector/component.html.erb
@@ -1,5 +1,5 @@
 <%= render_component_tag id: id,
-  class: "not-prose border-b border-lookbook-divider rounded overflow-hidden",
+  class: "border-b border-lookbook-divider rounded overflow-hidden",
   cloak: true do %>
 
   <%= lookbook_render :toolbar, class: "border border-b-0 border-lookbook-divider rounded-t" do |toolbar| %>
