--- a/app/views/lookbook/inspector/show.html.erb
+++ b/app/views/lookbook/inspector/show.html.erb
@@ -101,7 +101,7 @@
               copy: !!panel.copy,
               "x-show": "$store.inspector.drawer.activeTab === '#{panel.name}'",
               cloak: true do %>
-              <%== panel.copy ? panel.copy : "" %>
+              <%= panel.copy ? panel.copy : "" %>
               <% end %>
           <% end %>  
         <% end %>
