docs: continue with docs rebuild

--- a/docs/src/_layouts/api.erb
+++ b/docs/src/_layouts/api.erb
@@ -3,14 +3,7 @@ layout: docs
 ---
 
 <%
-klass = site.data.api[resource.data.subject.to_sym].symbolize_keys
-# klass[:methods].each do |method|
-#   resource.data.headings.push({label: method.name, id: method[:id]})
-# end
-resource.data.title = %Q(
-  <span class="text-gray-400 opacity-75">API /</span>
-  #{resource.data.label}
-)
+klass = site.data.api[resource.data.subject.to_sym]&.symbolize_keys
 %>
  
 <% if klass %>
