--- a/docs/src/_components/lookbook_docs/api_params_list/component.html.erb
+++ b/docs/src/_components/lookbook_docs/api_params_list/component.html.erb
@@ -1,19 +1,1 @@
-<%= tag.div **html_attrs do %>
-  <table>
-    <tbody>
-      <% params.each do |param| %>
-        <tr>
-          <td class="w-[20%]">
-            <code class="text-indigo-600"><%= param[:name] %></code>
-          </td>
-          <td class="w-[10%]">
-            <code class="text-gray-500"><%= param[:types] %></code>
-          </td>
-          <td>
-            <%= markdown param[:text] %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
+<%= render LookbookDocs::ParamsList::Component.new(params: params, options_only: options_only) %>
