--- a/docs/src/_components/lookbook_docs/api_method/component.html.erb
+++ b/docs/src/_components/lookbook_docs/api_method/component.html.erb
@@ -1,9 +1,14 @@
-<%= tag.div **html_attrs, class: "bg-gray-100" do %>
+<%= tag.div **html_attrs, class: "border border-gray-300 rounded my-6 shadow-sm" do %>
   <h3>
-    <a href="#<%= id %>" class="no-underline block pl-4 pr-10 py-2 bg-gray-200 group relative">
+    <a href="#<%= id %>" class="no-underline block pl-4 pr-10 py-2 group relative border-b border-gray-300 ">
       <code class="inline-flex items-center text-indigo-700 font-semibold">
-        <span class="font-normal opacity-60">#</span>
-        <span><%= signature.strip %></span>
+        <span class="font-normal opacity-60"><%= scope == "class" && klass.present? ? "#{klass}." : "#" %></span>
+        <span class=""><%= signature_call %></span>
+        <span class="font-normal opacity-80">
+          <% if signature_args.present? %>
+            <strong>(</strong><%= signature_args %><strong>)</strong>
+          <% end %>
+        </span>
       </code>
       <% if return_types.present? %>
         <code class="mx-2 inline-block text-gray-500 opacity-80">&rarr; <%== return_types %></code>
@@ -13,12 +18,18 @@
       </span>
     </a>
   </h3>
-  <div class="space-y-4 p-4">
+  <div class="space-y-4 p-4 bg-gray-50 ">
+    <% if description != false %>
       <div class="prose">
-        <%= markdown(description.presence || "_No description available._" ) %>
+        <% if description.present? %>
+          <%= markdown description %>
+        <% elsif description.nil? %>
+          <%= markdown "_No description available._" %>
+        <% end %>
       </div>
+    <% end %>
     <% if params.any? %>
-      <%= render LookbookDocs::ApiParamsList::Component.new(params: params) %>
+      <%= render LookbookDocs::ApiParamsList::Component.new(params: params, options: options) %>
     <% end %>
   </div>
 <% end %>
