--- a/docs/src/_layouts/docs.erb
+++ b/docs/src/_layouts/docs.erb
@@ -3,7 +3,7 @@ layout: skeleton
 ---
 <%
 collection = resource.collection
-nav_groups = site.data.sections[collection.label.downcase.to_sym]&.groups || []
+nav_groups = site.data[collection.label.downcase.to_sym]&.nav&.groups || []
 %>
 
 <div class="layout-container !block md:!grid">
@@ -25,20 +25,20 @@ nav_groups = site.data.sections[collection.label.downcase.to_sym]&.groups || []
 
   <div class="layout-column overflow-y-scroll h-full md:h-auto relative scroll-smooth">
     <main class="layout-content py-8">
-      <header class="mb-8 md:pb-8 md:border-b xl:border-gray-300">
-        <h1 class="text-4xl font-extralight text-indigo-600">
-          <%== resource.data.title %>
-        </h1>
-      </header>
       <div class="lg:pr-[240px]">
-        <% if resource.data.toc.any? %>
-          <div class="md:float-right mt-6 mb-6 md:ml-6 md:mr-0 md:mt-0 md:w-[220px] lg:mr-[-240px] lg:sticky top-8">
+        <% if resource.data.toc.many? %>
+          <div class="md:w-[220px] lg:mr-[-240px] sticky top-8 float-right z-50">
             <%= render LookbookDocs::Toc::Component.new do |menu| %>
               <% resource.data.toc.each { menu.link(**_1) }%>
             <% end %>
           </div>
         <% end %>
         <div>
+          <header class="mb-8 md:pb-8 md:border-b xl:border-gray-300">
+            <h1 class="text-4xl font-extralight text-indigo-600">
+              <%== resource.data.title %>
+            </h1>
+          </header>
           <%= yield %>
         </div>
       </div>
